# fortime

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example.f90
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  example.F90
examples/example2/: CMakeLists.txt  example.F90
examples/example3/: CMakeLists.txt  example.F90
source/: CMakeLists.txt  fortime_m.F90  kinds_m.f90  timefunctor_m.F90
